# pytest-marker-demo

./: Makefile  README.md  pyproject.toml  pytest.ini
tests/: conftest.py  test_version.py
tests/fixtures/: customer.py  orders.py
tests/lib/: annotations.py  version.py
tests/parametrized/: test_customer.py  test_customer_v1.py  test_customer_v2beta1.py
tests/random_fixture/: test_customer.py  test_customer_v1.py  test_customer_v2beta1.py
