[tool.poetry]
name = "pytest-marker-demo"
version = "0.1.0"
description = "A small demo of interesting ways to use pytest markers"
authors = ["David Stanek <dstanek@dstanek.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
verbose = true
line-length = 88

[tool.isort]
profile="black"
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
strict = true
